# pyttern

./: .gitignore  AstGenerator.py  AstWalker.py  HoleAST.py  Matcher.py  PatternMatch.py  PyHoleErrorListener.py  PyHoleParser.py  PyHoleVisitor.py  Python3Visitor.py  README.md  old.pyproject.toml  pyproject.toml  pytest.ini  q1_3.py  requirements.txt  setup.py  target.py  test.py  tests.py
.github/workflows/: python-app.yml  python-lint.yml  python-publish.yml
PyHole/: HoleAST.py  Matcher.py  PyHoleErrorListener.py  PyHoleParser.py  PyHoleVisitor.py
PyHole/antlr/: Python3.g4  Python3.interp  Python3.tokens  Python3Lexer.tokens  Python3Parser.py  generate.sh
PyHole/visualizer/: Visualizer.py
antlr/: Python3.g4  Python3.interp  Python3.tokens  Python3Lexer.interp  Python3Lexer.py  Python3Lexer.tokens  Python3Listener.py  Python3Parser.py  Python3Visitor.py
examples/java/: Function.java  Test.java
examples/python/: simple-function.py  simple-function.pyh
pyttern/: PytternListener.py  __init__.py  main.py  matcher.py  misconmatcher.py  pyttern_error_listener.py
pyttern/antlr/: Python3Lexer.g4  Python3Lexer.interp  Python3Lexer.py  Python3Lexer.tokens  Python3LexerBase.py  Python3Parser.g4  Python3Parser.interp  Python3Parser.py  Python3ParserListener.py  generate.sh  (+1 more)
test/: Elif.py  Pattern13soft.pyh  pyHoleCompoundOk.py  pyHoleCompoundSoft.pyh  pyHoleCoupoundOk.py  pyHoleLabeled.py  pyHoleMultipleDepth.py  pyHoleNok.py  pyHoleTest.py  q1_254.py  q1_3.py  strictModeTest.pyh  test_grammar.py
tests/: tests.py
visualizer/: Visualizer.py  template.html
(+212 files in other folders)
